--- a/client/style.css
+++ b/client/style.css
@@ -1,5 +1,6 @@
 html, body {
   height: 100%;
+  background: linear-gradient(90deg, #fcff9e 0%, #c67700 100%);
   width: 100%;
   margin: 0;
   padding: 0;
@@ -18,6 +19,8 @@ html, body {
   margin-left: 20px;
   font-size: 2em;
   text-align: left;
+  border-style: 2px black solid;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 #instructions {
@@ -29,6 +32,7 @@ html, body {
 
 #mapForm, #commentForm, #userForm {
   margin-top: 20px;
+  margin-left: 20px;
 }
 
 #searchResults {
@@ -41,4 +45,17 @@ html, body {
 
 #buttons {
   margin-top: 10px;
+}
+
+h1 {
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  text-align: center;
+}
+
+h3 {
+  font-family: 'Courier New', Courier, monospace;
+}
+
+#instructions p {
+  font-size:large;
 }
